--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                 <img src="assets/Chocolatine-scaled.jpg" alt="chocolatine">
             </div>
 
-            <div>
+            <div class="chocoLatine">
                 <h4> UNE CHOCOLATINE</h4>
             </div>
 
-            <div>
+            <div class="pain">
                 <h4> UN PAIN AU CHOCOLAT</h4>
             </div>
 
