--- a/index.html
+++ b/index.html
@@ -165,11 +165,14 @@
             <img src="/assets/cannelenoiretblanc.png" alt="cannelé">
             <h5 class="scorecannele">
                 0 </h5>
+            <h5 class="winner">a</h5>
+
         </div>
         <div class="macaron">
             <img src="/assets/Logomacaronnoiretblanc.png" alt="macaron">
             <h5 class="scoremacaron">
                 0 </h5>
+            <h5 class="loser">b</h5>
         </div>
 
     </footer>
