--- a/index.html
+++ b/index.html
@@ -41,28 +41,19 @@
                         <form id="form">
                             <div class="inputBox">
                                 <input type="text" id="text1" placeholder="Team 1" value="">
+                                <h2 id="team1"></h2>
                                 <button id="btn1">OK</button>
                             </div>
                             <div class="inputBox">
                                 <input type="text" id="text2" placeholder="Team 2" value="">
+                                <h2 id="team2"></h2>
                                 <button id="btn2">OK</button>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-            <div class="card">
-               <div class="containerCard">
-                    <h2 id="team1"></h2>
-                    <img src="" alt="">
-                </div>
-            </div>
-            <div class="card">
-                <div class="containerCard">
-                    <h2 id="team2"></h2>
-                    <img src="" alt="">
-                 </div>
-            </div>
+            
             <div class="modal" id="modal">
                 <div class="classModal">
                     <img src="/assets/dd7ad49354b2a89638ba15925905610a.gif" alt="">
@@ -74,8 +65,67 @@
         <button id="btnWin">Qui commence?</button> 
     </section>
 
+    <section class="quizz1">
+        <div class="slider">
+            <div class="question">
+                <h2 class="stringQuestion">Prêt pour la première question ?</h2>
+                <div class="fullAnswer">
+                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
+                </div>
+            </div>
+            <div class="question">
+                <h2 class="stringQuestion">Quel est le nom du formateur JS ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer">David Ginola</h3>
+                    <h3 class="wrongAnswer">Jean-Louis David</h3>
+                    <h3 class="wrongAnswer">David Faible</h3>
+                    <h3 class="rightAnswer">David Faure</h3>
+                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
+                </div>
+            </div>
+            <div class="question">
+                <h2 class="stringQuestion">Quel est le nom du formateur PHP ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer">Jean le Géant</h3>
+                    <h3 class="rightAnswer">Jean le Grand</h3>
+                    <h3 class="wrongAnswer">Jean le Petit</h3>
+                    <h3 class="wrongAnswer">Jean le Nain</h3>
+                </div>
+            </div>
+            <div class="question">
+                <h2 class="stringQuestion">Quel est le nom de l'équipe de rugby de Bordeaux ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer">UGC</h3>
+                    <h3 class="rightAnswer">UBB</h3>
+                    <h3 class="wrongAnswer">UBER</h3>
+                    <h3 class="wrongAnswer">GIT HUB</h3>
+                </div>
+            </div>
+            <div class="question">
+                <h2 class="stringQuestion">Quelle porte est connue à Bordeaux ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer answer">Porte d'Alsace</h3>
+                    <h3 class="wrongAnswer answer">Porte de Gironde</h3>
+                    <h3 class="rightAnswer answer">Porte de Bourgogne</h3>
+                    <h3 class="wrongAnswer answer">Porte des toilettes</h3>
+                </div>
+            </div>
+        </div>
+    
+        <div class="cont-btn">
+            <div class="btn-nav right"><ion-icon name="arrow-redo-circle-outline"></ion-icon></div>
+        </div>
+    </section>
+
     <footer class="footer">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, iusto ullam corrupti unde excepturi natus animi voluptates fugit. Unde, nihil qui neque voluptas vero magnam, voluptatum, repudiandae velit eveniet quidem reiciendis deleniti laboriosam sint eaque laudantium illum tempore autem dolores dicta eligendi possimus dolorem quia voluptatem nam! Sapiente voluptas vero placeat laborum? Molestiae reiciendis architecto dolorem fuga, pariatur nobis nesciunt accusantium magnam distinctio facere qui tempore voluptatibus commodi eos repudiandae doloremque vero aperiam hic earum quas? Odit quia nemo, obcaecati ut incidunt dignissimos, consequatur hic, sapiente placeat doloremque vitae maiores impedit consequuntur? Iure, obcaecati quidem maxime quam vero veniam sint!</p>
+            <div class="cannele">
+                <img src="/assets/cannelenoiretblanc.png" alt="cannelé">
+                <h5 class="scorecannele">0 </h5>
+            </div>
+            <div class="macaron">
+                <img src="/assets/Logomacaronnoiretblanc.png" alt="macaron">
+                <h5 class="scoremacaron"> 0 </h5>
+            </div>
     </footer>
 
     <script src="app.js"></script>
