--- a/index.html
+++ b/index.html
@@ -60,14 +60,11 @@
                                 <input type="text" id="text1" placeholder="Team 1" value="">
                                 <h2 id="team1"></h2>
                                 <button id="btn1">OK</button>
-                                <h2 id="team1"></h2>
                             </div>
-                            <br><br><br>
                             <div class="inputBox">
                                 <input type="text" id="text2" placeholder="Team 2" value="">
                                 <h2 id="team2"></h2>
                                 <button id="btn2">OK</button>
-                                <h2 id="team2"></h2>
                             </div>
                         </form>
                     </div>
@@ -77,23 +74,25 @@
                 <div class="classModal">
                     <img src="/assets/dd7ad49354b2a89638ba15925905610a.gif" alt="">
                     <h3>L'équipe&nbsp;<span id="teamWin"></span><br>&nbsp;commence</h3>
-                    <button id="btnClose">GO!!</button>
+                    <button id="btnClose"><a href="#start"> GO!!</a></button>
                 </div>
             </div>
         </div>
 
-        <button id="btnWin">Qui est l'équipe vin rouge?</button>
+        <button id="btnWin">Qui commence ?</button>
 
 
 
 
     </section>
 
-
-    <section class="quizz1" id="ancreStart">
+    <section class="quizz1" id="start">
         <div class="slider">
             <div class="question">
                 <h2 class="stringQuestion">Prêt pour la première question ?</h2>
+                <div class="fullAnswer">
+                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
+                </div>
             </div>
             <div class="question">
                 <h2 class="stringQuestion">Quel est le nom du formateur JS ?</h2>
@@ -102,6 +101,7 @@
                     <h3 class="wrongAnswer">Jean-Louis David</h3>
                     <h3 class="wrongAnswer">David Faible</h3>
                     <h3 class="rightAnswer">David Faure</h3>
+                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
                 </div>
             </div>
             <div class="question">
@@ -116,10 +116,10 @@
             <div class="question">
                 <h2 class="stringQuestion">Quel est le nom de l'équipe de rugby de Bordeaux ?</h2>
                 <div class="fullAnswer">
-                    <h3 class="wrongAnswer">UGC</h3>
-                    <h3 class="rightAnswer">UBB</h3>
-                    <h3 class="wrongAnswer">UBER</h3>
-                    <h3 class="wrongAnswer">GIT HUB</h3>
+                    <h3 class="wrongAnswer">Ugc</h3>
+                    <h3 class="rightAnswer">Ubb</h3>
+                    <h3 class="wrongAnswer">Uber</h3>
+                    <h3 class="wrongAnswer">Git Hub</h3>
                 </div>
             </div>
             <div class="question">
@@ -131,83 +131,29 @@
                     <h3 class="wrongAnswer">Porte des toilettes</h3>
                 </div>
             </div>
-
-            <div class="cont-btn">
-                <div class="btn-nav left">←</div>
-                <div class="btn-nav right">→</div>
-            </div>
-    </section>
-
-
-
-
-
-    <section class="questionMort">
-
-        <div class="questionfinal">
-
-
-
-            <div class="chocolatine">
-                <h4> UNE CHOCOLATINE</h4>
-            </div>
-
-            <div class="choco">
-                <img src="/assets/chocolatinefinale.jpg" alt="chocolatine" id="chocoId">
-            </div>
-
-            <div class="pain">
-                <h4> UN PAIN AU CHOCOLAT</h4>
-            </div>
-
-        </div>
-
-
-    </section>
-
-    <section class="quizz1">
-        <div class="slider">
             <div class="question">
-                <h2 class="stringQuestion">Prêt pour la première question ?</h2>
+                <h2 class="stringQuestion">Quelle porte est connue à Bordeaux ?</h2>
                 <div class="fullAnswer">
-                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
-                </div>
-            </div>
-            <div class="question">
-                <h2 class="stringQuestion">Quel est le nom du formateur JS ?</h2>
-                <div class="fullAnswer">
-                    <h3 class="wrongAnswer">David Ginola</h3>
-                    <h3 class="wrongAnswer">Jean-Louis David</h3>
-                    <h3 class="wrongAnswer">David Faible</h3>
-                    <h3 class="rightAnswer">David Faure</h3>
-                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
-                </div>
-            </div>
-            <div class="question">
-                <h2 class="stringQuestion">Quel est le nom du formateur PHP ?</h2>
-                <div class="fullAnswer">
-                    <h3 class="wrongAnswer">Jean le Géant</h3>
-                    <h3 class="rightAnswer">Jean le Grand</h3>
-                    <h3 class="wrongAnswer">Jean le Petit</h3>
-                    <h3 class="wrongAnswer">Jean le Nain</h3>
-                </div>
-            </div>
-            <div class="question">
-                <h2 class="stringQuestion">Quel est le nom de l'équipe de rugby de Bordeaux ?</h2>
-                <div class="fullAnswer">
-                    <h3 class="wrongAnswer">UGC</h3>
-                    <h3 class="rightAnswer">UBB</h3>
-                    <h3 class="wrongAnswer">UBER</h3>
-                    <h3 class="wrongAnswer">GIT HUB</h3>
+                    <h3 class="wrongAnswer">Porte d'Alsace</h3>
+                    <h3 class="wrongAnswer">Porte de Gironde</h3>
+                    <h3 class="rightAnswer">Porte de Bourgogne</h3>
+                    <h3 class="wrongAnswer">Porte des toilettes</h3>
                 </div>
             </div>
             <div class="question">
                 <h2 class="stringQuestion">Quelle porte est connue à Bordeaux ?</h2>
                 <div class="fullAnswer">
-                    <h3 class="wrongAnswer answer">Porte d'Alsace</h3>
-                    <h3 class="wrongAnswer answer">Porte de Gironde</h3>
-                    <h3 class="rightAnswer answer">Porte de Bourgogne</h3>
-                    <h3 class="wrongAnswer answer">Porte des toilettes</h3>
+                    <h3 class="wrongAnswer">Porte d'Alsace</h3>
+                    <h3 class="wrongAnswer">Porte de Gironde</h3>
+                    <h3 class="rightAnswer">Porte de Bourgogne</h3>
+                    <h3 class="wrongAnswer">Porte des toilettes</h3>
+                </div>
+            </div>
+            
+            <div class="question">
+                <h2 class="stringQuestion">Prêt pour le Bordeaux de la mort?</h2>
+                <div class="fullAnswer">
+                    <button class="btnMort"><a href="#mort">go</a></button>
                 </div>
             </div>
         </div>
@@ -217,19 +163,37 @@
         </div>
     </section>
 
+
+
+
+
+    <section class="questionMort" id="mort">
+        <div class="questionfinal">
+            <div class="chocolatine" >
+                <h4> UNE CHOCOLATINE</h4>
+            </div>
+            <div class="choco">
+                <img src="/assets/chocolatinefinale.jpg" alt="chocolatine" id="chocoId">
+            </div>
+            <div class="pain">
+                <h4> UN PAIN AU CHOCOLAT</h4>
+            </div>
+        </div>
+
+
+ 
+
     <footer class="footer">
-
         <div class="logoCompteur">
-
             <div class="cannele">
-                <img src="/assets/vin rouge.png" alt="vinrouge">
-                <h5 class="scorecannele">
-                    0 </h5>
+                <img id="winner" src="/assets/grapes-1994650_1920.png" alt="vinrouge">
+                <h5 class="scorecannele">0 </h5>
+                <h5 class="winner"></h5>
             </div>
             <div class="macaron">
-                <img src="/assets/vin blanc.png" alt="vinblanc">
-                <h5 class="scoremacaron">
-                    0 </h5>
+                <img id ="looser" src="/assets/grapes-1994649_1920 copie.png" alt="vinblanc">
+                <h5 class="scoremacaron">0 </h5>
+                <h5 class="loser"></h5>
             </div>
         </div>
 
