--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,12 +54,12 @@
                         <h2>Répartition des équipes</h2>
                         <form id="form">
                             <div class="inputBox">
-                                <input type="text" id="text1" placeholder="Vin rouge" value="">
+                                <input type="text" id="text1" placeholder="Team 1" value="">
                                 <h2 id="team1"></h2>
                                 <button id="btn1">OK</button>
                             </div>
                             <div class="inputBox">
-                                <input type="text" id="text2" placeholder="Vin blanc" value="">
+                                <input type="text" id="text2" placeholder="Team 2" value="">
                                 <h2 id="team2"></h2>
                                 <button id="btn2">OK</button>
                             </div>
@@ -89,7 +88,7 @@
             <div class="question">
                 <h2 class="stringQuestion">Prêt pour la première question ?</h2>
                 <div class="fullAnswer">
-                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
+                    <img src="assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
                 </div>
             </div>
             <div class="question">
@@ -147,7 +146,7 @@
                     <h3 class="wrongAnswer">Porte des toilettes</h3>
                 </div>
             </div>
-            
+
             <div class="question">
                 <h2 class="stringQuestion">Prêt pour le Bordeaux de la mort?</h2>
                 <div class="fullAnswer">
@@ -169,7 +168,7 @@
 
     <section class="questionMort" id="mort">
         <div class="questionfinal">
-            <div class="chocolatine" >
+            <div class="chocolatine">
                 <h4> UNE CHOCOLATINE</h4>
             </div>
             <div class="choco">
@@ -181,45 +180,31 @@
         </div>
 
 
- 
-
-    <footer class="footer">
-        <div class="logoCompteur">
-            <div class="cannele">
-                <img id="winner" src="/assets/grapes-1994650_1920.png" alt="vinrouge">
-                <h5 class="scorecannele">0 </h5>
-                <h5 class="winner"></h5>
-            </div>
-            <div class="macaron">
-                <img id ="looser" src="/assets/grapes-1994649_1920 copie.png" alt="vinblanc">
-                <h5 class="scoremacaron">0 </h5>
-                <h5 class="loser"></h5>
-            </div>
-
-            <div class="pain">
-                <h4> UN PAIN AU CHOCOLAT</h4>
-            </div>
-
-        </div>
-
-
 
 
         <footer class="footer">
-
             <div class="logoCompteur">
-
                 <div class="cannele">
-                    <img id="winner" src="/assets/vin rouge.png" alt="vinrouge">
-                    <h5 class="scorecannele">
-                        0 </h5>
+                    <div class="vinrouge">
+                        <img id="winner" src="/assets/grapes-1994650_1920.png" alt="vinrouge">
+                    </div>
+                    <div class="scoreVinrouge">
+                        <h5 class="scorecannele">0 </h5>
+                    </div>
+                    <div class="scoreWinner">
+                        <h5 class="winner"></h5>
+                    </div>
                 </div>
+
+
                 <div class="macaron">
-                    <img id="looser" src="/assets/vin blanc.png" alt="vinblanc">
-                    <h5 class="scoremacaron">
-                        0 </h5>
+                    <div class="vinblanc">
+                        <img id="looser" src="/assets/grapes-1994649_1920 copie.png" alt="vinblanc">
+                    </div>
+                    <div class="score" <h5 class="scoremacaron">0 </h5>
+                        <h5 class="loser"></h5>
+                    </div>
                 </div>
-            </div>
 
         </footer>
 
