--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="modal" id="modal">
                 <div class="classModal">
-                    <img src="/assets/dd7ad49354b2a89638ba15925905610a.gif" alt="">
+                    <img src="assets/dd7ad49354b2a89638ba15925905610a.gif" alt="">
                     <h3>L'équipe&nbsp;<span id="teamWin"></span><br>&nbsp;commence</h3>
                     <button id="btnClose"><a href="#start"> GO!!</a></button>
                 </div>
@@ -91,7 +91,7 @@
             <div class="question">
                 <h2 class="stringQuestion">Prêt pour la première question ?</h2>
                 <div class="fullAnswer">
-                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
+                    <img src="assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
                 </div>
             </div>
             <div class="question">
@@ -101,7 +101,7 @@
                     <h3 class="wrongAnswer">Jean-Louis David</h3>
                     <h3 class="wrongAnswer">David Faible</h3>
                     <h3 class="rightAnswer">David Faure</h3>
-                    <img src="/assets/3b7213f7-32a8-4923-bf70-51714fb0945a.webp" alt="">
+                    <img src="assets/David_Faure_.jpeg" alt="">
                 </div>
             </div>
             <div class="question">
@@ -111,6 +111,7 @@
                     <h3 class="rightAnswer">Jean le Grand</h3>
                     <h3 class="wrongAnswer">Jean le Petit</h3>
                     <h3 class="wrongAnswer">Jean le Nain</h3>
+                    <img src="assets/1563973598150.jpeg" alt="">
                 </div>
             </div>
             <div class="question">
@@ -120,6 +121,7 @@
                     <h3 class="rightAnswer">Ubb</h3>
                     <h3 class="wrongAnswer">Uber</h3>
                     <h3 class="wrongAnswer">Git Hub</h3>
+                    <img src="assets/ballon rugby.jpeg" alt="">
                 </div>
             </div>
             <div class="question">
@@ -129,27 +131,9 @@
                     <h3 class="wrongAnswer">Porte de Gironde</h3>
                     <h3 class="rightAnswer">Porte de Bourgogne</h3>
                     <h3 class="wrongAnswer">Porte des toilettes</h3>
+                    <img src="assets/Porte_de_Bourgogne_-_Bordeaux.jpeg" alt="">
                 </div>
             </div>
-            <div class="question">
-                <h2 class="stringQuestion">Quelle porte est connue à Bordeaux ?</h2>
-                <div class="fullAnswer">
-                    <h3 class="wrongAnswer">Porte d'Alsace</h3>
-                    <h3 class="wrongAnswer">Porte de Gironde</h3>
-                    <h3 class="rightAnswer">Porte de Bourgogne</h3>
-                    <h3 class="wrongAnswer">Porte des toilettes</h3>
-                </div>
-            </div>
-            <div class="question">
-                <h2 class="stringQuestion">Quelle porte est connue à Bordeaux ?</h2>
-                <div class="fullAnswer">
-                    <h3 class="wrongAnswer">Porte d'Alsace</h3>
-                    <h3 class="wrongAnswer">Porte de Gironde</h3>
-                    <h3 class="rightAnswer">Porte de Bourgogne</h3>
-                    <h3 class="wrongAnswer">Porte des toilettes</h3>
-                </div>
-            </div>
-            
             <div class="question">
                 <h2 class="stringQuestion">Prêt pour le Bordeaux de la mort?</h2>
                 <div class="fullAnswer">
@@ -160,6 +144,7 @@
     
         <div class="cont-btn">
             <div class="btn-nav right"><ion-icon name="arrow-redo-circle-outline"></ion-icon></div>
+            <div><h4 class="titreScore"></h4></div>
         </div>
     </section>
 
@@ -173,7 +158,7 @@
                 <h4> UNE CHOCOLATINE</h4>
             </div>
             <div class="choco">
-                <img src="/assets/chocolatinefinale.jpg" alt="chocolatine" id="chocoId">
+                <img src="assets/chocolatinefinale.jpg" alt="chocolatine" id="chocoId">
             </div>
             <div class="pain">
                 <h4> UN PAIN AU CHOCOLAT</h4>
@@ -186,17 +171,24 @@
     <footer class="footer">
         <div class="logoCompteur">
             <div class="cannele">
-                <img id="winner" src="/assets/grapes-1994650_1920.png" alt="vinrouge">
-                <h5 class="scorecannele">0 </h5>
-                <h5 class="winner"></h5>
+                <div class="vinrouge">
+                    <img src="assets/grapes-1994650_1920.png" alt="" >
+                </div>
+                <div class="scorevinrouge">
+                    <h5 class="scorecannele">0 </h5>
+                    <h5 class="winner"></h5>
+                </div>
             </div>
             <div class="macaron">
-                <img id ="looser" src="/assets/grapes-1994649_1920 copie.png" alt="vinblanc">
-                <h5 class="scoremacaron">0 </h5>
-                <h5 class="loser"></h5>
+                <div class="vinblanc">
+                  <img src="assets/grapes-1994649_1920 copie.png" alt="vinblanc">
+                </div>
+                <div class="scorevinblanc">
+                  <h5 class="scoremacaron">0 </h5>
+                  <h5 class="loser"></h5>
+                </div>
             </div>
         </div>
-
     </footer>
 
     <script src="app.js"></script>
