--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
+
+<!DOCTYPE html>
+<html lang="fr">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Bordeaux Quizz</title>
     <link rel="stylesheet" href="style.css">
-</head>
 
+</head>
 <body>
 
     <header class="header">
@@ -118,7 +121,7 @@
                     <h3 class="rightAnswer">Ubb</h3>
                     <h3 class="wrongAnswer">Uber</h3>
                     <h3 class="wrongAnswer">Git Hub</h3>
-                    <img src="assets/ballon rugby.jpeg" alt="">
+                    <img src="assets/ballonrugby.jpeg" alt="">
                 </div>
             </div>
             <div class="question">
@@ -134,14 +137,13 @@
             <div class="question">
                 <h2 class="stringQuestion">Prêt pour le Bordeaux de la mort?</h2>
                 <div class="fullAnswer">
-                    <button class="btnMort"><a href="#mort">go</a></button>
+                    <button class="btnMort"><a href="#mort">C'est parti!</a></button>
                 </div>
             </div>
         </div>
     
         <div class="cont-btn">
             <div class="btn-nav right"><ion-icon name="arrow-redo-circle-outline"></ion-icon></div>
-            <div><h4 class="titreScore"></h4></div>
         </div>
     </section>
 
@@ -161,7 +163,7 @@
                 <h4> UN PAIN AU CHOCOLAT</h4>
             </div>
         </div>
-
+    </section>
 
  
 
@@ -178,7 +180,7 @@
             </div>
             <div class="macaron">
                 <div class="vinblanc">
-                  <img src="assets/grapes-1994649_1920 copie.png" alt="vinblanc">
+                  <img src="assets/grapes19946491920copie.png" alt="vinblanc">
                 </div>
                 <div class="scorevinblanc">
                   <h5 class="scoremacaron">0 </h5>
@@ -192,7 +194,5 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 </body>
-
 </html>
